update readme.md file

--- a/compose.yaml
+++ b/compose.yaml
@@ -1,5 +1,8 @@
 services:
-  web:
-    build: .
+  weathertoday:
+    build: docker
+    restart: always
+    container_name: jensenweatherapp
     ports:
       - "8299:8299"
+      - "8787:8787"
